<resources>
    <string name="app_name">OHLC</string>
    <string-array name="menu_content">
        <item>Name</item>
        <item>Search new</item>
        <item>Settings</item>
        <item>Exit</item>
    </string-array>
    <string name="column_header_date">DATE</string>
    <string name="column_header_open">OPEN</string>
    <string name="column_header_high">HIGH</string>
    <string name="column_header_low">LOW</string>
    <string name="column_header_close">CLOSE</string>
    <string name="send">Send</string>
    <string name="server_response_waiting">Waiting gor server response</string>
    <string name="set_time_range">Set time range</string>
    <string name="order_by">Order by</string>
    <string-array name="sort_by">
        <item>Date</item>
        <item>Open</item>
        <item>High</item>
        <item>Low</item>
        <item>Close</item>
    </string-array>
    <string name="set">Set</string>
    <string name="low_date_example">1970-01-01</string>
    <string name="high_date_example">2020-12-31</string>
    <string name="by_less">By less</string>
    <string name="by_greater">By greater</string>
    <string name="less">Less</string>
    <string name="rank_by">Rank by</string>
    <string name="greater">Greater</string>
</resources>
