<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:orientation="vertical">
<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:inputType="text"
            android:maxLines="1"
            android:id="@+id/keyword" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:text="@string/send"
            android:id="@+id/send" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView2"
        android:layout_gravity="center_horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sample"
            android:id="@+id/name"
            android:layout_gravity="center_horizontal"/>
    </ScrollView>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/shape"
        android:stretchColumns="*">

        <TableRow

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/table_header"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/column_header_date"
                android:layout_gravity="center"
                android:id="@+id/textView2"
                android:background="@drawable/shape"
                android:layout_column="0"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/column_header_open"
                android:id="@+id/textView3"
                android:layout_gravity="center"
                android:layout_column="1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/column_header_high"
                android:id="@+id/textView4"
                android:layout_gravity="center"
                android:layout_column="2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/column_header_low"
                android:id="@+id/textView5"
                android:layout_gravity="center"
                android:layout_column="3" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/column_header_close"
                android:id="@+id/textView6"
                android:layout_gravity="center"
                android:layout_column="4" />
        </TableRow>
    </TableLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView" >

        <include layout="@layout/response_table"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />

    </ScrollView>
    </LinearLayout>
</FrameLayout>